[SELC-7257] fix: changed attribute atecoCode into a list
