# app/src/main/resources/swagger/api-docs.json
@@ -62,18 +62,11 @@
     "/visura-infocamere-pdnd/institutions" : {
       "get" : {
         "tags" : [ "pdnd-visura-info-camere-controller" ],
-        "summary" : "Get institutions by institution description",
-        "description" : "Get the list of companies represented by description of the institutions passed as a parameter",
+        "summary" : "Get institutions detail by institution rea",
+        "description" : "Get the company represented by rea of the institution passed as a parameter",
         "operationId" : "institutionsPdndByReaGET",
         "parameters" : [ {
           "name" : "rea",
-          "in" : "query",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "name" : "county",
           "in" : "query",
           "required" : true,
           "schema" : {
@@ -1190,8 +1183,11 @@
           "digitalAddress" : {
             "type" : "string"
           },
-          "atecoCode" : {
-            "type" : "string"
+          "atecoCodes" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
           },
           "nrea" : {
             "type" : "string"
