# connector-api/src/main/java/it/pagopa/selfcare/party/registry_proxy/connector/api/PDNDInfoCamereConnector.java
@@ -11,6 +11,6 @@ public interface PDNDInfoCamereConnector {
 
     PDNDBusiness retrieveInstitutionDetail(String taxCode);
 
-    PDNDBusiness retrieveInstitutionFromRea(String rea, String county);
+    PDNDBusiness retrieveInstitutionFromRea(String county, String rea);
 
 }
